kubernetes/apps/kube-system/cilium/resources/cilium-spire-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: cilium-spire
  labels:
    pod-security.kubernetes.io/enforce: privileged
