kubernetes/apps/kube-system/cilium/resources/hubble-httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hubble-ui
  namespace: kube-system
spec:
  parentRefs:
    - name: kube-system-gateway-istio
      namespace: kube-system
      sectionName: https-hubble
  hostnames:
    - hubble.chillincool.net
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: hubble-ui
          port: 80
